--- a/views/publish_post.html
+++ b/views/publish_post.html
@@ -29,7 +29,8 @@
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Krishantering">Krishantering</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="/Ny">Publicera inlägg</a>
+                        <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="/Ny">Publicera
+                            inlägg</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Kontakt">Kontakta oss</a>
@@ -54,41 +55,45 @@
                         om?</b><br>Fyll i nedan formulär så ser vi till att folk får reda på händelsen</p>
                 <!--Form-->
                 <form action="/Ny" method="post" class="form_publish_post">
-                    <label for="category">
-                        <h3 class="ms-4 mt-2">Kriskategori</h3>
-                    </label>
-                    <select name="category" id="category" class="form-select widht-select ms-4 mt-1 mb-3">
-                        <option value="none" selected>Välj...</option>
-                        <option value="Fire">Brand</option>
-                        <option value="Shooting">Skottlossning</option>
-                        <option value="Smoke">Rökutveckling</option>
-                        <!--
+                    <div class="col-12 col-sm-5">
+                        <label for="category" class="form-label">
+                            <h3 class="ms-4 mt-2">Kriskategori</h3>
+                        </label>
+                        <input class="form-control ms-4" list="categoryOptions" id="category" placeholder="Sök...">
+                        <datalist id="categoryOptions">
+                            <option value="Brand">
+                            <option value="Skottlossning">
+                            <option value="Röutveckling">
+
+                                <!--
                                 Python:
                                 for i in cities print <option value="i">i</option>?
                             -->
-                    </select>
+                        </datalist>
+                    </div>
                     <div class="row">
                         <div class="col-12 col-lg-5">
-                            <label for="city">
+                            <label for="city" class="form-label">
                                 <h3 class="ms-4 mt-2">Stad</h3>
                             </label>
-                            <select name="city" id="city" class="form-select widht-select ms-4 mt-1 mb-3">
-                                <option value="none" selected>Välj...</option>
-                                <option value="Malmö">Malmö</option>
-                                <option value="Lund">Lund</option>
-                                <option value="Karlshamn">Karlshamn</option>
-                            </select>
+                            <input class="form-control ms-4" list="cityOptions" id="city" placeholder="Sök..." required>
+                            <datalist id="cityOptions">
+                                <option value="Malmö">
+                                <option value="Lund">
+                                <option value="Karlshamn">
+                            </datalist>
                         </div>
                         <div class="col-12 col-lg-5">
-                            <label for="ZIP-code">
+                            <label for="ZIP-code" class="form-label">
                                 <h3 class="ms-4 mt-2">Postnummer</h3>
                             </label>
-                            <select name="ZIP-code" id="ZIP-code" class="form-select widht-select ms-4 mt-1 mb-3">
-                                <option value="none" selected>Välj...</option>
-                                <option value="21110">211 10</option>
-                                <option value="21111">211 11</option>
-                                <option value="21112">211 12</option>
-                            </select>
+                            <input class="form-control ms-4" list="zipOptions" id="ZIP-code" placeholder="Sök..."
+                                required>
+                            <datalist id="zipOptions">
+                                <option value="21110">
+                                <option value="21111">
+                                <option value="21112">
+                            </datalist>
                         </div>
                     </div>
                     <div class="form-check ms-4 mt-2">
