--- a/views/publish_post.html
+++ b/views/publish_post.html
@@ -62,12 +62,14 @@
                             <h3 class="ms-4 mt-3">Kriskategori<span class="text-danger">*</span>
                         </label></h3>
                         </label>
-                        <input class="form-control ms-4" list="categoryOptions" id="category" name="category"
+                        <input class="form-control ms-4" list="categoryOptions" id="category" name="category" required
                             placeholder="Sök..." value={{category}}>
                         <datalist id="categoryOptions">
                             <option value="Brand">
                             <option value="Skottlossning">
                             <option value="Rökutveckling">
+                            <option value="Vattenförorening">
+                            <option value="Sprängdåd">
 
                                 <!--
                                 Python:
@@ -82,7 +84,7 @@
                                 <h3 class="ms-4 mt-2">Stad<span class="text-danger">*</span>
                             </label></h3>
                             </label>
-                            <input class="form-control ms-4" list="cityOptions" id="city" name="city"
+                            <input class="form-control ms-4" list="cityOptions" id="city" name="city" required
                                 placeholder="Sök..." value={{city}}>
                             <datalist id="cityOptions">
                                 <option value="Malmö">
@@ -96,7 +98,7 @@
                                 <h3 class="ms-4 mt-2">Postnummer<span class="text-danger">*</span>
                             </label></h3>
                             </label>
-                            <input class="form-control ms-4" list="zipOptions" id="ZIP-code" name="ZIP-code"
+                            <input class="form-control ms-4" list="zipOptions" id="ZIP-code" name="ZIP-code" required
                                 placeholder="Sök..." value={{zip_code}}>
                             <datalist id="zipOptions">
                                 <option value="21110">
