--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Logga in</title>
+  <title>Kontakta oss</title>
   <!--BootstrapCSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -27,18 +27,25 @@
           <li class="nav-item">
             <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Krishantering">Krishantering</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="/Kontakt">Kontakta
+              oss</a>
+          </li>
+          <!--Inloggad användare-->
           {% if is_logged_in != None %}
           <li class="nav-item">
             <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Ny">Publicera inlägg</a>
           </li>
-          {% endif %}
           <li class="nav-item">
-            <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="/Kontakt">Kontakta oss</a>
+            <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Profil">Min profil</a>
           </li>
+          <!--Inte inloggad användare-->
+          {% else %}
           <li class="nav-item">
             <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga_in">Logga in/
               <br>Registrera dig</a>
           </li>
+          {% endif %}
         </ul>
       </div>
     </div>
