--- a/templates/index.html
+++ b/templates/index.html
@@ -28,18 +28,24 @@
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Krishantering">Krishantering</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Kontakt">Kontakta oss</a>
+                    </li>
+                    <!--Inloggad användare-->
                     {% if is_logged_in != None %}
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Ny">Publicera inlägg</a>
                     </li>
-                    {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Kontakt">Kontakta oss</a>
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Profil">Min profil</a>
                     </li>
+                    <!--Inte inloggad användare-->
+                    {% else %}
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga_in">Logga in/
                             <br>Registrera dig</a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
