--- a/templates/publish_post.html
+++ b/templates/publish_post.html
@@ -29,15 +29,24 @@
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Krishantering">Krishantering</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Ny">Publicera inlägg</a>
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Kontakt">Kontakta
+                            oss</a>
+                    </li>
+                    <!--Inloggad användare-->
+                    {% if is_logged_in != None %}
+                    <li class="nav-item">
+                        <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" href="/Ny" aria-current="page">Publicera inlägg</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Kontakt">Kontakta oss</a>
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Profil">Min profil</a>
                     </li>
+                    <!--Inte inloggad användare-->
+                    {% else %}
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="/Logga_in">Logga in/
                             <br>Registrera dig</a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
