--- a/templates/profile.html
+++ b/templates/profile.html
@@ -55,43 +55,53 @@
     <div class="container-md">
         <div class="row">
             <!--Aside content-->
-            <aside class="col-12 col-md-5 p-4 general_light_blue">
-                <h2 id="phead" class="text-center">Min profil</h2>
-                <form action="/Uppdatera-email" method="POST">
-                    <label for="email_field" class="formhead">E-post</label>
-                    <input disabled class="form-control mb-0" type="email" id="email_field" name="Email"
-                        value="{{user_email}}">
-                    {% if empty_field != "" %}
-                    <p class="feedback_message_register mb-0"><small>{{empty_field}}</small></p>
-                    {% elif no_new_email != "" %}
-                    <p class="feedback_message_register mb-0"><small>{{no_new_email}}</small></p>
-                    {% elif updated_email != "" %}
-                    <p class="feedback_message_success mb-0"><small>{{updated_email}}</small></p>
-                    {% endif %}
-                    <input type="button" onclick="undisable_emailfield()" value="Ändra" class="mt-3 btn btn-dark btn-sm"
-                        id="btn_toggle"></input>
-                </form>
-                <h4 class="mt-5 text-center">Notifikationer</h4>
-                <label for="postnummer" class="formhead">Postnummer</label>
-                <input class="form-control" type="text" id="zipcode" name="Postnummer">
-                <br>
+            <aside class="col-12 col-md-5 col-lg-4 p-4 general_light_blue">
+                <div class="d-flex justify-content-center">
+                    <img src="static\Profile.jpg" alt="Ikon, profilbild" id="profile_pic"
+                        class="rounded-circle col-2 border border-white border-3 mt-2">
+                </div>
+                <h2 id="phead" class="text-center mt-2">Min profil</h2>
+                <div class="d-flex justify-content-center">
+                    <form action="/Uppdatera-email" method="POST" class="col-11 col-lg-9">
+                        <label for="email_field" class="formhead">E-post</label>
+                        <input disabled class="form-control mb-0" type="email" id="email_field" name="Email"
+                            value="{{user_email}}">
+                        {% if empty_field != "" %}
+                        <p class="feedback_message_register mb-0"><small>{{empty_field}}</small></p>
+                        {% elif no_new_email != "" %}
+                        <p class="feedback_message_register mb-0"><small>{{no_new_email}}</small></p>
+                        {% elif updated_email != "" %}
+                        <p class="feedback_message_success mb-0"><small>{{updated_email}}</small></p>
+                        {% endif %}
+                        <input type="button" onclick="undisable_emailfield()" value="Ändra"
+                            class="mt-3 btn btn-dark btn-sm" id="btn_toggle"></input>
+                    </form>
+                </div>
+                <h4 class="mt-4 text-center">Notifikationer</h4>
+                <div class="d-flex justify-content-center">
+                    <form action="" method="" class="col-11 col-lg-9">
+                        <label for="postnummer" class="formhead">Postnummer</label>
+                        <input type="text" id="zipcode" name="Postnummer" class="form-control">
+                        <input type="checkbox" id="epost-notis" name="epost-notis" value="1">
+                        <label for="epost-notis">
+                            <small>Jag vill få notiser på e-post när något händer i mitt område</small>
+                        </label>
+                        <br>
+                        <button type="button" class="mt-3 btn btn-dark btn-sm">Spara</button>
+                    </form>
+                </div>
 
-                <input type="checkbox" id="epost-notis" name="epost-notis" value="1">
-                <label for="epost-notis">
-                    <small>Jag vill få notiser på e-post när något händer i mitt område</small>
-                </label><br>
-                <button type="button" id="savebtn" class="mt-2 btn-sm">Spara</button>
-                <br>
-                <br>
-                <form action="/Logga_ut" method="GET">
-                    <input type="submit" class="logoutbtn btn-sm" value="Logga ut">
-                </form>
-                <br>
-                <br>
-                <br>
+                <div class="d-flex justify-content-center">
+                    <form action="/Logga_ut" method="GET" class="mt-4 mb-5 col-11 col-lg-9">
+                        <input type="submit" class="logoutbtn btn-sm" value="Logga ut">
+                    </form>
+                </div>
 
                 <!--Buttons to delete account and log out-->
-                <button type="button" onclick="openDeleteModal()" class="mt-4 deletebtn btn-sm">Radera konto</button>
+                <div class="d-flex justify-content-center">
+                    <button type="button" onclick="openDeleteModal()" class="mt-2 mt-md-5 deletebtn">Radera kontot</button>
+                </div>
+
                 <!--Modal-->
                 <div id="deleteModal" class="modal">
                     <div class="modal-content">
@@ -107,11 +117,11 @@
 
             </aside>
             <!--Main content-->
-            <main id="profilepage" class="col-12 col-md-7">
+            <main id="profilepage" class="col-12 col-md-7 col-lg-8">
                 <h3 id="phead" class="mt-4 text-center">Mina inlägg</h3>
 
                 <!--History of published posts-->
-                <div class="p-5">
+                <div class="p-1 p-lg-5">
                     <table class="table table-striped">
                         <thead>
                             <tr>
