--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/stylesheet.css">
+    <script src="../static/script.js"></script>
     <!--Font Awesome pil-ikon för dropdown menu-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -36,10 +37,22 @@
                     <li><a href="/Kontakt">Kontakta oss</a></li>
 
                     <!--Inloggad användare-->
-                    {% if is_logged_in != None %}
-                    <li><a href="/Ny">Publicera inlägg</a></li>
-                    <li><a href="/Profil" id="profilebtn">Min profil</a></li>
-                    <li><a href="/Logga_ut" id="logoutbtn" class="mt-4 mb-5"> Logga ut </a></li>
+                {% if is_logged_in != None %}
+                <li><a href="/Ny">Publicera inlägg</a></li>
+                <li><a href="/Profil" id="profilebtn">Min profil</a></li>
+                <li><a href="#" onclick="openLogoutModal()" id="logoutbtn" class="mt-4 mb-5" > Logga ut </a></li>
+
+                <div id="logouteModal" class="modal">
+                    <div class="modal-content">
+                        <span class="close" onclick="closeLogoutModal()">&times;</span>
+                        <p>Är du säker på att du vill logga ut?.</p>
+                        <form id="logoutForm" action="/Logga_ut" method="POST">
+                            <input type="hidden" name="logout" value="true">
+                            <button type="submit" class="deletebtn">Ja, logga ut.</button>
+                            <button type="button" onclick="closeLogoutModal()" class="cancelbtn">Avbryt</button>
+                        </form>
+                    </div>
+                </div>
                     
                     <!--Inte inloggad användare-->
                     {% else %}
