--- a/templates/profile.html
+++ b/templates/profile.html
@@ -37,10 +37,22 @@
                     <li><a href="/Kontakt">Kontakta oss</a></li>
 
                     <!--Inloggad användare-->
-                    {% if is_logged_in != None %}
-                    <li><a href="/Ny">Publicera inlägg</a></li>
-                    <li><a href="/Profil" id="profilebtn">Min profil</a></li>
-                    <li><a href="/Logga_ut" id="logoutbtn" class="mt-4 mb-5"> Logga ut </a></li>
+                {% if is_logged_in != None %}
+                <li><a href="/Ny">Publicera inlägg</a></li>
+                <li><a href="/Profil" id="profilebtn">Min profil</a></li>
+                <li><a href="#" onclick="openLogoutModal()" id="logoutbtn" class="mt-4 mb-5" > Logga ut </a></li>
+
+                <div id="logouteModal" class="modal">
+                    <div class="modal-content">
+                        <span class="close" onclick="closeLogoutModal()">&times;</span>
+                        <p>Är du säker på att du vill logga ut?.</p>
+                        <form id="logoutForm" action="/Logga_ut" method="POST">
+                            <input type="hidden" name="logout" value="true">
+                            <button type="submit" class="deletebtn">Ja, logga ut.</button>
+                            <button type="button" onclick="closeLogoutModal()" class="cancelbtn">Avbryt</button>
+                        </form>
+                    </div>
+                </div>
                     
                     <!--Inte inloggad användare-->
                     {% else %}
@@ -93,7 +105,7 @@
                 </div>
 
                 <div class="d-flex justify-content-center">
-                    <form action="/Logga_ut" method="GET" class="mt-4 mb-5 col-11 col-lg-9">
+                    <form action="#" onclick="openLogoutModal()" method="GET" class="mt-4 mb-5 col-11 col-lg-9">
                         <input type="submit" class="logoutbtn btn-sm" value="Logga ut">
                     </form>
                 </div>
@@ -108,7 +120,7 @@
                     <div class="modal-content">
                         <span class="close" onclick="closeDeleteModal()">&times;</span>
                         <p>Är du säker på att du vill radera ditt konto? Detta kan inte ångras.</p>
-                        <form id="deleteForm" action="/index.html" method="POST">
+                        <form id="deleteForm" action="/delete_account" method="POST">
                             <input type="hidden" name="delete" value="true">
                             <button type="submit" class="deletebtn">Ja, radera mitt konto</button>
                             <button type="button" onclick="closeDeleteModal()" class="cancelbtn">Avbryt</button>
