--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -138,7 +138,6 @@ nav ul li #dropmenu {
     background-color: rgb(188, 7, 7);
     color: white;
 }
-
 /* Header and nav styling ends here */
 
 
@@ -155,7 +154,6 @@ nav ul li #dropmenu {
     background-color: #a0afc6;
 
 }
-
 /* Ends here */
 
 .card {
@@ -182,7 +180,6 @@ nav ul li #dropmenu {
     box-shadow: 6px 6px 0 0 rgba(33, 54, 90, .11) !important;
     border-left: 10px solid #000000;
 }
-
 /* Ends here */
 
 
@@ -289,8 +286,8 @@ nav ul li #dropmenu {
 .register-link p a:hover {
     text-decoration: underline;
 }
-
 /* Login page styling ends here */
+
 
 /* Profile page styling */
 #profilepage {
@@ -357,7 +354,6 @@ nav ul li #dropmenu {
 .logoutbtn:hover {
     background-color: #141f54;
 }
-
 /* Profile page styling ends here */
 
 
@@ -426,7 +422,6 @@ hr {
 #copy {
     text-align: center;
 }
-
 /* Footer styling ends here */
 
 .general_light_blue {
@@ -469,7 +464,7 @@ hr {
     padding: 2px;
 }
 
-/* Pop up styling vid radering och spara  konto */
+/* Pop up styling when deleting and saving account*/
 .modal {
     display: none;
     position: fixed;
@@ -542,6 +537,7 @@ hr {
     cursor: pointer;
     border-radius: 5px;
 }
+/* Pop up styling ends here */
 
 .meny {
     display: none;
@@ -605,6 +601,8 @@ hr {
 
 }
 
+
+/* Styling for screens with a min width of 576px and max width of 768px */
 @media screen and (max-width: 768px) and (min-width: 576px) {
     .widht-select {
         width: 30vw;
