--- a/templates/contact.html
+++ b/templates/contact.html
@@ -96,14 +96,17 @@
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                Accordion Item #2
+                Är inläggen på pålitliga?
               </button>
             </h2>
 
             <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                demonstrate the class. This is the second item's accordion
-                body. Let's imagine this being filled with some actual content.</div>
+              <div class="accordion-body">Inläggen på sidan är både publicerad av våra användare men man kan även filtrera till polisens 
+                inlägg. När man går med i Kriskoll så måste man ange sin ålder vilket delvis begränsar scam inlägg.
+                <br>
+                <br>
+                Däremot kan vi inte garantera att varje inlägg av våra användare är pålitlig.
+              </div>
             </div>
           </div>
 
@@ -111,16 +114,14 @@
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                Accordion Item #3
+                Hur publicerar jag ett inlägg?
               </button>
             </h2>
 
             <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion
-                body. Nothing more exciting happening here in terms of content, but just filling up the
-                space to make it look, at least at first glance, a bit more representative of how this
-                would look in a real-world application.</div>
+              <div class="accordion-body"> Du publicerar ett inlägg genom att Logga in eller Gå med och sedan klicka på "publicera inlägg" i menyn.
+                Se till att informationen är korrekt och sedan publicera inlägget.
+              </div>
             </div>
           </div>
         </div>
