--- a/templates/chrisis_tips.html
+++ b/templates/chrisis_tips.html
@@ -26,42 +26,39 @@
   </div>
   <p id="slogan">Ditt bidrag, vår säkerhet</p>
 
-  <!--NavBar-->
-  <nav class="navbar">
-    <ul>
-        <li id="dropmenu">
-            <div class="meny">Meny</div> <i class="fa fa-caret-down"></i>
-            <ul class="dropdown-content">
-                <li><a href="/">Hem</a></li>
-                <li><a href="/Krishantering">Krishantering</a></li>
-                <li><a href="/Kontakt">Kontakta oss</a></li>
+    <!--NavBar-->
+    <nav class="navbar">
+      <ul>
+          <li><a href="/">Hem</a></li>
+          <li><a href="/Krishantering">Krishantering</a></li>
+          <li><a href="/Kontakt">Kontakta oss</a></li>
 
-      <!--Inloggad användare-->
-      {% if is_logged_in != None %}
-      <li><a href="/Ny">Publicera inlägg</a></li>
-      <li><a href="/Profil" id="profilebtn">Min profil</a></li>
+          <!--Inloggad användare-->
+          {% if is_logged_in != None %}
+          <li><a href="/Ny">Publicera inlägg</a></li>
+          <li><a href="/Profil" id="profilebtn">Min profil</a></li>
+          <li><a href="#" onclick="openLogoutModal()" id="logoutbtn" class="mt-4 mb-5" > Logga ut </a></li>
 
-                <div id="logoutModal" class="modal">
-                    <div class="modal-content">
-                        <span class="close" onclick="closeLogoutModal()">&times;</span>
-                        <p>Är du säker på att du vill logga ut?</p>
-                        <form id="logoutForm" action="/Logga_ut" method="POST">
-                            <input type="hidden" name="logout" value="true">
-                            <button type="submit" class="deletebtn">Ja, logga ut.</button>
-                            <button type="button" onclick="closeLogoutModal()" class="cancelbtn">Avbryt</button>
-                        </form>
-                    </div>
-                </div>
-                
-                <!--Inte inloggad användare-->
-                {% else %}
-                <li><a href="/Logga_in" id="loginbtn">Logga in</a></li>
-                <li><a href="/Registrering" id="regbtn">Gå med</a></li>
-                {% endif %}
-            </ul>
-        </li>
-    </ul>
-</nav>
+          <div id="logoutModal" class="modal">
+              <div class="modal-content">
+                  <span class="close" onclick="closeLogoutModal()">&times;</span>
+                  <p>Är du säker på att du vill logga ut?</p>
+                  <form id="logoutForm" action="/Logga_ut" method="POST">
+                      <input type="hidden" name="logout" value="true">
+                      <button type="submit" class="deletebtn">Ja, logga ut.</button>
+                      <button type="button" onclick="closeLogoutModal()" class="cancelbtn">Avbryt</button>
+                  </form>
+              </div>
+          </div>
+
+
+          <!--Inte inloggad användare-->
+          {% else %}
+          <li><a href="/Logga_in" id="loginbtn">Logga in</a></li>
+          <li><a href="/Registrering" id="regbtn">Gå med</a></li>
+          {% endif %}
+      </ul>
+  </nav>
 
 
   <div class="container">
