--- a/templates/profile.html
+++ b/templates/profile.html
@@ -111,7 +111,7 @@
                     <div class="modal-content">
                         <span class="close" onclick="closeDeleteModal()">&times;</span>
                         <p>Är du säker på att du vill radera ditt konto? Detta kan inte ångras.</p>
-                        <form id="deleteForm" action="/index.html" method="POST">
+                        <form id="deleteForm" action="/delete_account" method="POST">
                             <input type="hidden" name="delete" value="true">
                             <button type="submit" class="deletebtn">Ja, radera mitt konto</button>
                             <button type="button" onclick="closeDeleteModal()" class="cancelbtn">Avbryt</button>
@@ -151,44 +151,45 @@
     </div>
 </main>
 
-    <!--Footer-->
-    <footer>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col">
-                    <div class="logo-container">
-                        <p id="logohead">K</p>
-                        <div class="logobody-wrapper">
-                            <p class="logobody">RIS</p>
-                            <p class="logobody2">OLL</p>
-                        </div>
-                    </div>
-                </div>
+<!--Footer-->
+<footer>
+<div class="container-fluid">
+    <div class="row">
+    <div class="col">
+        <div class="logo-container">
+        <p id="logohead">K</p>
+        <div class="logobody-wrapper">
+            <p class="logobody">RIS</p>
+            <p class="logobody2">OLL</p>
+        </div>
+        </div>
+    </div>
 
-                <div class="col">
-                    <p class="fhead">Följ oss</p>
-                    <p class="ftext">Facebook</p>
-                    <p class="ftext">Instagram</p>
-                    <p class="ftext">Youtube</p>
-                </div>
+    <div class="col">
+        <p class="fhead">Följ oss</p>
+        <p class="ftext">Facebook</p>
+        <p class="ftext">Instagram</p>
+        <p class="ftext">Youtube</p>
+    </div>
 
-                <div class="col">
-                    <p class="fhead">Juridiskt</p>
-                    <p class="ftext">Integritetspolicy</p>
-                    <p class="ftext">Cookiepolicy</p>
-                    <p class="ftext">Sekretessinställningar</p>
-                </div>
+    <div class="col">
+        <p class="fhead">Juridiskt</p>
+        <p class="ftext">Integritetspolicy</p>
+        <p class="ftext">Cookiepolicy</p>
+        <p class="ftext">Sekretessinställningar</p>
+    </div>
 
-                <div class="col">
-                    <p class="fhead">Om KrisKoll</p>
-                    <p class="ftext">Om oss</p>
-                    <p class="ftext">Kontakta oss</p>
-                    <p class="ftext">Hållbarhet</p>
-                </div>
-            </div>
-            <hr>
-            <p id="copy">© 2024 KrisKoll</p>
-    </footer>
+    <div class="col">
+        <p class="fhead">Om KrisKoll</p>
+        <p class="ftext">Om oss</p>
+        <p class="ftext">Kontakta oss</p>
+        <p class="ftext">Hållbarhet</p>
+    </div>
+    </div>
+    <hr>
+    <p id="copy">© 2024 KrisKoll</p>
+</div>
+</footer>
 
 
     <!--BootstrapJS-->
